# libcamera-opencv

./: CMakeLists.txt  README.md  SimpleCam.cpp  SimpleCam.h  main.cpp  mapped_framebuffer.cpp  mapped_framebuffer.h
